# final-project-schmidtfabian

./: .gitignore  .pre-commit-config.yaml  CHANGES.md  CITATION  README.md  environment.yml  pyproject.toml  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  enhancement.md  question.md
Previous_Version_Final_Project/: FinalprojectMain.ipynb  README_old.md  final_project_env_windows.yml
Previous_Version_Final_Project/data/: headlinesdatasetfinetuning.xlsx  headlinesdatasetfinetuninghandlabeled.xlsx  info.txt
Previous_Version_Final_Project/model/: info.txt
Previous_Version_Final_Project/results/: info.txt
paper/: final_project_schmidtfabian.tex  final_project_schmidtfabian_pres.tex  refs.bib  task_paper.py
src/final_project_schmidtfabian/: __init__.py  config.py
src/final_project_schmidtfabian/analysis/: analyze_sentiment.py  analyze_sentiment_headlines.py  create_labels_for_summary_statistics.py  task_analysis.py  task_analyze_sentiment.py  (+5 more)
tests/analysis/: test_analyze_sentiment_headlines.py  test_create_labels_for_summary_statistics.py  test_model.py  test_predict.py  test_train_text_classification_model.py
tests/data_management/: test_clean_data.py  test_clean_economic_activity_indicator.py  test_create_datasetdict.py  test_detrend_economic_indicator.py
tests/final/: __init__.py  test_write_mse_to_file.py  test_write_value_to_file.py
tests/time_series_analysis/: __init__.py  test_train_and_predict_VAR_model.py  test_train_arima_model.py
tests/webscraping/: __init__.py  test_webscrape_headlines.py
(+29 files in other folders)
