[metadata]
name = final_project_schmidtfabian
description = Revision of Forecasting economic activity using a text-classification model
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/schmidtfabian/final_project_schmidtfabian
author = Fabian Schmidt
author_email = schmidt.fabian-christian@t-online.de
license = Not open source
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: Not open source License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
project_urls =
    Changelog = https://github.com/schmidtfabian/final_project_schmidtfabian
    Documentation = https://github.com/schmidtfabian/final_project_schmidtfabian
    Github = https://github.com/schmidtfabian/final_project_schmidtfabian
    Tracker = https://github.com/schmidtfabian/final_project_schmidtfabian/issues

[options]
packages = find:
install_requires =
    pytask
python_requires = >=3.11
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[check-manifest]
ignore =
    src/final_project_schmidtfabian/_version.py
